# iai_gazebo_pkgs

./: README.md
iai_gazebo_controllers/: CMakeLists.txt  README.md  config.cfg  package.xml
iai_gazebo_controllers/experiments/: PR2-testcase-experiment.yaml  drink-pouring-robohow.yaml  generated-broken-experiment.yaml  pouring-from-left-experiment-default.yaml  pouring-from-left-experiment-unconstrained-orientation.yaml  pouring-from-left-experiment.yaml  pouring-from-right-experiment.yaml  pouring_ok.yaml
iai_gazebo_controllers/include/iai_gazebo_controllers/: WorldControlPlugin.hh  constraint_control_plugin.hh  constraint_pouring_controller.hh  conversions.hh  experiment_spec.hh  gazebo_utils.hh  giskard_control_plugin.hh  giskard_visualization_plugin.hh  motion_description.hh  yaml_parsing.hh
iai_gazebo_controllers/motions/: giskard_approach_motion.yaml  moveabovepan.yaml  moveabovepan_old_robohowdrink.yaml  pouring-expressions.yaml  pouring-from-left-approach-unconstrained-orientation.yaml  pouring-from-left-approach.yaml  pouring-from-left-tilt-unconstrained-orientation.yaml  pouring-from-left-tilt.yaml  sample-motion1.yaml  sample-motion2.yaml  tiltback-breaks2.yaml  tiltback.yaml  tiltback_old_robohowdrink.yaml  tiltbottle-breaks2.yaml  tiltbottle.yaml  tiltbottle2.yaml  tiltbottle3.yaml  tiltbottle_old_robohowdrink.yaml
iai_gazebo_controllers/motions/PR2/: PR2_moveabovepan.yaml  PR2_tiltback.yaml  PR2_tiltbottle.yaml
iai_gazebo_controllers/motions/breakscontroller/: moveabovepan.yaml  tiltback_break.yaml  tiltbottle.yaml
iai_gazebo_controllers/motions/georg_tests/: pouring-from-left-approach.yaml
iai_gazebo_controllers/motions/odd/: moveabovepan-odd.yaml  tiltbottle-odd.yaml
iai_gazebo_controllers/motions/works/: moveabovepan.yaml  tiltback.yaml  tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/: generated_backgroundinfo.txt  generated_backgroundinfo_clean.txt
iai_gazebo_controllers/robot_experiments/10/: PR2_experiment.yaml
iai_gazebo_controllers/robot_experiments/10/motions/: tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/100/motions/: moveabovepan.yaml  tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/11/motions/: moveabovepan.yaml
iai_gazebo_controllers/robot_experiments/12/motions/: tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/13/motions/: moveabovepan.yaml  tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/16/motions/: tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/2/motions/: moveabovepan.yaml  tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/20/motions/: moveabovepan.yaml  tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/23/motions/: tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/25/motions/: tiltback.yaml
iai_gazebo_controllers/robot_experiments/26/motions/: moveabovepan.yaml
iai_gazebo_controllers/robot_experiments/29/motions/: moveabovepan.yaml
iai_gazebo_controllers/robot_experiments/3/motions/: tiltbottle.yaml
iai_gazebo_controllers/robot_experiments/5/motions/: moveabovepan.yaml
iai_gazebo_controllers/robot_experiments/8/motions/: moveabovepan.yaml
iai_gazebo_controllers/robot_experiments/9/motions/: moveabovepan.yaml
iai_gazebo_controllers/src/iai_gazebo_controllers/: WorldControlPlugin.cc  constraint_control_plugin.cc  constraint_pouring_controller.cc  giskard_control_plugin.cc  giskard_visualization_plugin.cc
iai_gazebo_controllers/worlds/: PR2_testcase.world  PR2_testrobotyaml.world  constraint_controller_pouring.world  constraint_controller_pouring_01.world  constraint_controller_pouring_02.world  constraint_controller_pouring_behind.world  constraint_controller_pouring_left.world  constraint_controller_pouring_right-default.world  constraint_controller_pouring_right.world  generated_broken.world
iai_gazebo_visibility_mover/: CMakeLists.txt  package.xml
iai_gazebo_visibility_mover/config/: boxy_start_config.yaml
iai_gazebo_visibility_mover/include/iai_gazebo_visibility_mover/: pixel_counter.hpp  visibility_mover.hpp
iai_gazebo_visibility_mover/launch/: iai_gazebo_visibility_mover.launch
iai_gazebo_visibility_mover/src/iai_gazebo_visibility_mover/: opencv_player.cpp  pixel_counter.cpp  pixel_counter_node.cpp  visibility_mover.cpp  visibility_mover_node.cpp
iai_gazebo_visibility_mover/urdf/: boxy_description.urdf  boxy_description_transparent_arm.urdf
