<?xml version="1.0"?>
<package>
  <name>iai_gazebo_controllers</name>
  <version>0.0.0</version>
  <description>
    Controller plugins for gazebo.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fccl_core</build_depend>
  <build_depend>fccl_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>fccl_conversions</run_depend>
  <run_depend>fccl_core</run_depend>
</package>
