<?xml version="1.0"?>
<package format="2">
  <name>iai_gazebo_controllers</name>
  <version>0.0.0</version>
  <description>
    Controller plugins for gazebo.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml_cpp</depend>
  <depend>giskard</depend>
</package>
